app/globals.css
@import "https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css";
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  /* background-image: url(https://images.alphacoders.com/132/1321760.jpeg); */
  background-image: url(https://wallpapers-clan.com/wp-content/uploads/2023/10/night-forest-with-wild-animals-desktop-wallpaper-preview.jpg);
  background-size: cover;
  background-position: center;
  overflow: hidden;
}

.container {
  position: relative;
  max-width: 400px;
  height: 100px;
  background: rgba(22, 22, 22, 0.1);
  backdrop-filter: blur(50px);
  border: 2px solid rgba(255, 255, 255, 0.2);
  border-radius: 16px;
  padding: 20px;
  color: #fff;
  transition: height 0.6s ease;
}
.search-box {
  position: relative;
  width: 100%;
  height: 55px;
  display: flex;
  align-items: center;
}
.search-box input {
  position: absolute;
  width: 100%;
  height: 100%;
  background: transparent;
  border: 2px solid rgba(255, 255, 255, 0.2);
  outline: none;
  border-radius: 10px;
  font-size: 22px;
  color: #fff;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0 48px 0 42px;
}
.search-box input::placeholder {
  color: #fff;
  text-transform: capitalize;
}
.search-box i {
  position: absolute;
  left: 10px;
  font-size: 28px;
}
.search-box button {
  position: absolute;
  right: 0;
  width: 40px;
  height: 100%;
  background: transparent;
  border: none;
  outline: none;
  font-size: 28px;
  color: #fff;
  padding: 0 40px 0 5px;
  cursor: pointer;
}
.weather-box,
.weather-details,
.not-found {
  overflow: hidden;
  visibility: hidden;
}
.weather-box.active,
.weather-details.active,
.not-found.active {
  visibility: visible;
}
.weather-box .box,
.not-found .box {
  transform: translateY(-100%);
}

.weather-box.active .box,
.not-found.active .box {
  transform: translateY(0%);
  transition: transform 1s ease;
  transition-delay: 0.6s;
}
.weather-box .box .info-weather {
  transform: translateY(-120%);
}
.container.active .weather-box .box .info-weather,
.container.active .weather-details .humidity .info-humidity,
.container.active .weather-details .wind .info-wind {
  transform: translateY(0%);
  transition: transform 1s ease;
}

.weather-box {
  text-align: center;
  margin: 40px 0;
}
.weather-box img {
  width: 60%;
}
.weather-box .temperature {
  position: relative;
  font-size: 64px;
  line-height: 1;
  font-weight: 700;
  margin: 20px 0 6px -30px;
}
.weather-box .temperature span {
  position: absolute;
  font-size: 24px;
  margin-left: 4px;
}
.weather-box .decription {
  font-size: 22px;
  font-weight: 500;
  text-transform: capitalize;
}
.weather-details {
  position: absolute;
  bottom: 40px;
  left: 0;
  width: 100%;
  padding: 0 20px;
  display: flex;
}
.weather-details .humidity .info-humidity,
.weather-details .wind .info-wind {
  transform: translateY(-120%);
  overflow: hidden;
}
.weather-details .humidity,
.weather-details .wind {
  display: flex;
  align-items: center;
  width: 50%;
  transform: translateY(-100%);
}
.weather-details.active .humidity,
.weather-details.active .wind {
  transform: translateY(0%);
  transition: transform 1s ease;
  transition-delay: 1.2s;
}

.weather-details .humidity {
  padding-left: 20px;
  justify-content: flex-start;
}
.weather-details .wind {
  padding-right: 20px;
  justify-content: flex-end;
}
.weather-details i {
  font-size: 56px;
  margin-right: 10px;
}

.weather-details span {
  display: inline-block;
  font-size: 22px;
  font-weight: 500px;
}
.weather-details p {
  font-size: 14px;
  font-weight: 500;
}
.not-found {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  text-align: center;
  margin-top: 110px;
}
.not-found img {
  width: 65%;
}
.not-found p {
  font-size: 22px;
  font-weight: 500;
  margin-top: 12px;
}
.city-hide {
  display: none;
}
#clone-info-weather,
#clone-info-humidity,
#clone-info-wind {
  position: absolute;
  transform: translateY(-100%);
}
#clone-info-weather .weather {
  transform: translateY(120%);
  transition: transform 1s ease, opacity 0s;
  transition-delay: 0s, 2s;
}

.weather-box:not(.active) #clone-info-weather .weather {
  opacity: 0;
  transition-delay: 0s;
}
.active-clone#clone-info-weather .weather {
  transform: translateY(0%);
}
#clone-info-humidity span,
#clone-info-wind span {
  transform: translateY(100%);
  transition: transform 1s ease;
}

.active-clone#clone-info-humidity span,
.active-clone#clone-info-wind span {
  transform: translateY(0%);
}

